# personal-knowledge-vault

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.example.yaml  ontology.yaml
docs/: ARCHITECTURE.md  INGESTION.md  ONTOLOGY.md  QUERY.md
src/pkv/: __init__.py  cli.py  config.py  models.py  qa.py  watcher.py
src/pkv/clustering/: cluster.py  relationships.py
src/pkv/embeddings/: embedder.py  store.py
src/pkv/enrichment/: enricher.py  prompts.py
src/pkv/ingest/: chunker.py  processor.py
src/pkv/ingest/parsers/: __init__.py  docx.py  html.py  json_parser.py  markdown.py  pdf.py  text.py
src/pkv/maintenance/: heartbeat.py  janitor.py
src/pkv/query/: graph.py  search.py
src/pkv/storage/: __init__.py  base.py  bigquery.py  chromadb.py  dual.py
src/pkv/sync/: __init__.py  gdrive.py
src/pkv/vault/: ontology.py  templates.py  writer.py
tests/: test_ingest.py  test_vault.py
